# datathlon

./: .gitignore  Dockerfile  README.md  docker-compose_DEV.yaml  docker-compose_PROD.yaml  docker-compose_TEST.yaml  pyproject.toml  register_model.py  temp_registry_dockerfile
api/: Dockerfile  main.py  requirements.txt  utils.py
app/: NOVO.py  VARIABLES.py  collection_qdrant.py  collections_mongo.py  matching_functions.py  model_registry_new.py  registry_models.py  tTEEEEEsteeee.ipynb  tf_idf_cache.py
backup_untracked/: docker-compose_PROD.yaml
backup_untracked/app/: matching_functions.py  registry_models.py  tf_idf_cache.py
insertion/: Dockerfile  insertion_mongodb.py  insertion_qdrand.py  requirements.txt
kubernetes/: api_deployment.yaml
livekit/: Dockerfile  agent_AsCt.py  agent_google.py  agent_groq.py  agent_openai.py  docker-compose.yaml  interview_questions.yaml  livekit_test.ipynb  livekit_yaml  main.py  questions.py  requirements.txt
notebook/: decision.ipynb
streamlit_app/: Dockerfile  app.py  streamlit-deployment.yaml
streamlit_app/pages/: 1_vagas.py  2_applicants.py
